# calico-rs

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml  release.yml
crates/apis/: Cargo.toml
crates/apis/src/: bgp.rs  common.rs  config.rs  crd.rs  ipam.rs  lib.rs  networking.rs  node.rs  policy.rs
crates/bgp/: Cargo.toml
crates/bgp/src/: lib.rs
crates/calc/: Cargo.toml
crates/calc/src/: active_rules.rs  event_sequencer.rs  flowlogs.rs  from_resources.rs  graph.rs  k8s_policy.rs  labelindex.rs  lib.rs  policy_eval.rs  policy_resolver.rs  routes.rs  scope.rs  selector.rs
crates/calc/tests/: conformance.rs
crates/calicoctl/: Cargo.toml
crates/calicoctl/src/: main.rs
crates/cni/: Cargo.toml
crates/cni/src/: dataplane.rs  lib.rs  lock.rs  main.rs  orchestrate.rs  result.rs  sysctl.rs  wep.rs
crates/cni/tests/: cni_wep_integration.rs  dataplane_netns.rs
crates/controllers/: Cargo.toml
crates/controllers/src/: lib.rs  main.rs
crates/controllers/tests/: namespace_controller_integration.rs
crates/datastore/: Cargo.toml
crates/datastore/src/: backend.rs  cas.rs  kdd.rs  lib.rs  mem.rs  model.rs  syncer.rs  syncers.rs  watchersyncer.rs
crates/datastore/src/conversion/: mod.rs  policy.rs
crates/datastore/src/kdd/: delete.rs
crates/datastore/src/updateprocessors/: mod.rs
crates/datastore/tests/: kdd_integration.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: us1_crossnode.rs  us1_egress_release.rs  us1_samenode.rs  us2_policy.rs
crates/e2e/tests/common/: mod.rs
crates/felix/: Cargo.toml
crates/felix-ebpf/: Cargo.toml  README.md  rust-toolchain.toml
crates/felix-ebpf/src/: lib.rs
crates/felix/src/: config.rs  dataplane.rs  endpoint_manager.rs  ipset_manager.rs  lib.rs  main.rs  nat.rs  nft.rs  nftables.rs  policy_agent.rs  policy_render.rs  policy_table.rs  reconcile.rs  route_manager.rs  vxlan.rs  vxlan_reconcile.rs
crates/felix/tests/: endpoint_netns.rs  ipset_netns.rs  nft_netns.rs  policy_agent_cluster.rs  policy_forward_netns.rs  policy_table_netns.rs  reconcile_cluster.rs  route_netns.rs  vxlan_netns.rs
crates/ipam/: Cargo.toml
crates/ipam/src/: addr.rs  affinity.rs  allocate.rs  block.rs  config.rs  handle.rs  kdd.rs  lib.rs  reservation.rs
crates/ipam/tests/: kdd_ipam_integration.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs  retry.rs  startup.rs
crates/node/tests/: startup_integration.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/reconcile/: Cargo.toml
crates/reconcile/src/: caching_map.rs  delta_tracker.rs  health.rs  lib.rs  observability.rs  set_delta_tracker.rs
crates/typha/: Cargo.toml
crates/typha/src/: main.rs
deploy/: Dockerfile  bootstrap.yaml  calico-rs-controllers.yaml  calico-rs.yaml  crds.yaml  kind-config.yaml
scripts/: build-image.sh  k0s-cluster.sh  kind-cluster.sh
tests/fixtures/: README.md
