[package]
name = "apis"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", default-features = false, features = ["derive"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng = "0.10.0"

[dev-dependencies]
serde_json.workspace = true
