[package]
name = "calc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
apis = { version = "0.1.0", path = "../apis" }
proto = { path = "../proto" }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
