[package]
name = "calicoctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
datastore = { version = "0.1.0", path = "../datastore" }
ipam = { version = "0.1.0", path = "../ipam" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng = "0.10.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
