[package]
name = "controllers"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "calico-rs-controllers"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
apis = { version = "0.1.0", path = "../apis" }
datastore = { version = "0.1.0", path = "../datastore" }
ipam = { version = "0.1.0", path = "../ipam" }
futures.workspace = true
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", features = ["client", "runtime", "rustls-tls"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
datastore = { path = "../datastore" }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", features = ["client"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
