[package]
name = "datastore"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
futures.workspace = true
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", features = ["client", "runtime", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
