[package]
name = "e2e"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# This crate exists purely to host the US1 end-to-end conformance tests under
# tests/ (see tests/common/mod.rs for the self-skip + gating pattern). The lib
# target itself (src/lib.rs) is intentionally empty so `cargo build --workspace`
# never needs any of these — only `cargo test -p e2e` does.
[dev-dependencies]
apis = { version = "0.1.0", path = "../apis" }
datastore = { version = "0.1.0", path = "../datastore" }
ipam = { version = "0.1.0", path = "../ipam" }
futures.workspace = true
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", features = ["client", "runtime", "rustls-tls", "ws"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
