[package]
name = "felix"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
apis = { version = "0.1.0", path = "../apis" }
base64 = "0.22.1"
calc = { version = "0.1.0", path = "../calc" }
datastore = { version = "0.1.0", path = "../datastore" }
ipam = { version = "0.1.0", path = "../ipam" }
futures.workspace = true
kube = { version = "4.0.0", features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
rtnetlink = "0.21.0"
serde_json.workspace = true
sha2 = "0.11.0"
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[dev-dependencies]
datastore = { path = "../datastore" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
