[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "calico-rs-node"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
datastore = { version = "0.1.0", path = "../datastore" }
felix = { version = "0.1.0", path = "../felix" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
