[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "calico-rs-node"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
apis = { version = "0.1.0", path = "../apis" }
base64 = "0.22.1"
datastore = { version = "0.1.0", path = "../datastore" }
felix = { version = "0.1.0", path = "../felix" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
